--- a/Deals/Custom Cells/DealsListingTableViewCell.xib
+++ b/Deals/Custom Cells/DealsListingTableViewCell.xib
@@ -26,7 +26,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="134" id="KGk-i7-Jjw" customClass="DealsListingTableViewCell" customModule="Deals" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="134" id="KGk-i7-Jjw" customClass="DealsListingTableViewCell" customModule="Dollor_Deals" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="134"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -113,7 +113,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rK6-JI-zPS">
-                                <rect key="frame" x="124" y="56.5" width="33" height="16"/>
+                                <rect key="frame" x="124" y="42" width="33" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -143,6 +143,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="ykD-dd-HG6" firstAttribute="bottom" secondItem="Cmr-wB-3jk" secondAttribute="bottom" id="1q8-mb-hgu"/>
+                            <constraint firstItem="rK6-JI-zPS" firstAttribute="top" secondItem="FHZ-1D-n7d" secondAttribute="bottom" constant="15" id="30q-1b-Nen"/>
                             <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="MhL-dx-O9v" secondAttribute="trailing" constant="5" id="4pL-OY-D06"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="rK6-JI-zPS" secondAttribute="trailing" constant="5" id="5mb-gJ-V7K"/>
                             <constraint firstItem="xbP-0d-6TT" firstAttribute="leading" secondItem="ykD-dd-HG6" secondAttribute="trailing" constant="17" id="6gB-eg-8an"/>
@@ -157,7 +158,6 @@
                             <constraint firstItem="ORX-EJ-zeq" firstAttribute="leading" secondItem="FHZ-1D-n7d" secondAttribute="leading" id="lDp-ua-RLV"/>
                             <constraint firstItem="Cmr-wB-3jk" firstAttribute="centerY" secondItem="cMn-ry-IbK" secondAttribute="centerY" id="mQc-JR-6Ir"/>
                             <constraint firstItem="xbP-0d-6TT" firstAttribute="bottom" secondItem="ykD-dd-HG6" secondAttribute="bottom" id="qbl-La-GVb"/>
-                            <constraint firstItem="rK6-JI-zPS" firstAttribute="top" secondItem="MhL-dx-O9v" secondAttribute="bottom" constant="10" id="rvC-QD-hLg"/>
                             <constraint firstItem="ORX-EJ-zeq" firstAttribute="top" secondItem="FHZ-1D-n7d" secondAttribute="bottom" constant="6" id="sUI-W1-2O3"/>
                             <constraint firstItem="MhL-dx-O9v" firstAttribute="leading" secondItem="ORX-EJ-zeq" secondAttribute="trailing" constant="1" id="tkD-6z-eWS"/>
                             <constraint firstItem="MhL-dx-O9v" firstAttribute="centerY" secondItem="ORX-EJ-zeq" secondAttribute="centerY" id="wn0-On-U7R"/>
